[tool.poetry]
name = "dvc-practice"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "dvc_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
dvc = {extras = ["all"], version = "^3.39.0"}
dvc-gdrive = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
