[tool.poetry]
name = "zerocopy-loading"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "zerocopy_loading"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.7.1"
transformers = "^4.52.1"
ray = "^2.44.0"
zerocopy = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
