[tool.poetry]
name = "autogen-fastapi-ex"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "autogen_fastapi_ex"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pyautogen = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
