[tool.poetry]
name = "observe-with-langfuse"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "observe_with_langfuse"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.286"
openai = "^0.28.0"
langfuse = "^1.0.18"
unstructured = "^0.10.14"
chromadb = "^0.4.10"
tiktoken = "^0.5.0"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
