[tool.poetry]
name = "mlflow-fastapi-k8s"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_fastapi_k8s"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
mlflow = "^2.9.2"
scikit-learn = "^1.3.2"
uvicorn = "^0.24.0.post1"
streamlit = "^1.29.0"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
