[tool.poetry]
name = "mlflow-fastapi-k8s"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_fastapi_k8s"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
mlflow = "^2.15.1"
scikit-learn = "^1.5.1"
uvicorn = "^0.24.0.post1"
streamlit = "^1.29.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
