[tool.poetry]
name = "sklearn-mlflow"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "sklearn_mlflow"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
scikit-learn = "^1.5.1"
mlflow = "^2.20.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
