[tool.poetry]
name = "ray-distilbert"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_distilbert"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
ray = {extras = ["serve"], version = "^2.5.1"}
torch = "^2.0.1"
transformers = "^4.39.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
