[tool.poetry]
name = "ray-distilbert"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_distilbert"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
ray = {extras = ["serve"], version = "^2.44.0"}
torch = "^2.7.1"
transformers = "^4.53.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
