[tool.poetry]
name = "ray-stablediffusion"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_stablediffusion"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
ray = {extras = ["serve"], version = "^2.5.1"}
torch = "^2.0.1"
transformers = "^4.36.0"
diffusers = "^0.17.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
