[tool.poetry]
name = "ray-yolov5s"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "ray_yolov5s"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
ray = {extras = ["serve"], version = "^2.5.1"}
requests = "^2.31.0"
transformers = "^4.39.3"
torch = "^2.0.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
